# PANDROIDE_InfDiag_BandB

./: .buildinfo  .gitignore  CNAME  README.md  genindex.html  index.html  index.md  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
_sources/: index.rst.txt
branchAndBound/: andOrGraph.py  bandbLIMID.py  minindepset.py
branchAndBound/htmldocs/: andOrGraph.html  bandbLIMID.html
branchAndBound/temporaire/: code copie.ipynb  code.ipynb
code/: #%%import pyAgrum as gum.py  andOrGraph.py  bandbLIMID.py  code.ipynb  code_temp.ipynb  exemple_robot.py  main.py  minindepset.py  tempAEffacer.py
code/.ipynb_checkpoints/: code-checkpoint.ipynb
docs/: .~lock.Planning.ods#  Cahier des charges.tex  Classeur1.xlsx  Planning.ods  Rapport.tex  cahier_des_charges.tex
docs/articles/: Thumbs.db
docs/documentation/doc html/: objects.inv
docs/documentation/doc_html/: .buildinfo  index.html
docs/laTex_Documents/: Cahier des charges.tex  Rapport.tex
docs/other/: Planning.ods
test/: IDrobot_et _notessur_pyagrum.ipynb  Untitled.ipynb  brouillon.ipynb  robot_propre.py  robot_propre_v2_(+maze_string).py  tests.ipynb  tests.py
test/.ipynb_checkpoints/: IDrobot_et _notessur_pyagrum-checkpoint.ipynb
tests/: tests.py
tests/.ipynb_checkpoints/: IDrobot_et _notessur_pyagrum-checkpoint.ipynb  Untitled-checkpoint.ipynb  tests-checkpoint.ipynb
