[metadata]
# replace with your username:
name = branchAndBound-pkg-PINAUD-BIEGAS
version = 0.0.1
author =David_PINAUD-Emilie_BIEGAS
author_email = pinauddavid@yahoo.fr_emilie.biegas@etu.upmc.fr
description = branch and bound methode for LIMID inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidPinaud/PANDROIDE_InfDiag_BandB
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.5

[options.packages.find]
where = src
